Bug 218846: We need to call _PR_CleanupIO before we start to clean up the current thread because _PR_CleanupIO needs to acquire a lock, which needs the current thread ID.  The patch is contributed by Gerard Roos <gerard.roos@adnovum.ch>.  r=wtc.